fix: reorganize directories and files, create core folder

--- a/src/app/core/components/header/header.html
+++ b/src/app/core/components/header/header.html
@@ -11,7 +11,7 @@
         </div>
 
         <div class="ml-auto">
-            <app-navigation></app-navigation>
+            <p>navigation</p>
         </div>
     </div>
 </header>
