feat: add new dashboard

--- a/src/app/core/components/dashboard/dashboard.html
+++ b/src/app/core/components/dashboard/dashboard.html
@@ -1,1 +1,16 @@
-<p>dashboard works!</p>
+<app-header></app-header>
+
+<div class="container mx-auto h-20 grid grid-cols-2 gap-4 p-6">
+
+    <div class="border-2 border-gray-200 rounded-xl p-5 flex flex-col items-center">
+        
+        <div class="bg-blue-100 rounded-full mb-5 h-16 w-16 flex items-center justify-center">
+            <span class="fa-solid fa-qrcode text-3xl text-blue-500"></span>
+        </div> <!-- span -->
+        
+        <div>title</div>
+        <button>button</button>
+    </div>
+    <div class="border-2 border-gray-200 rounded-xl p-2 flex flex-col items-center">col2</div>
+
+</div>
