--- a/src/app/core/components/dashboard/dashboard.html
+++ b/src/app/core/components/dashboard/dashboard.html
@@ -1,8 +1,9 @@
 <app-header></app-header>
 
-<div class="container mx-auto h-20 grid grid-cols-2 gap-4 p-6">
+<div class="container mx-auto h-20 grid grid-cols-2 gap-4 pt-10">
 
-    <div class="border-2 border-gray-200 rounded-xl p-5 flex flex-col items-center">
+    <!-- col 1 -->
+    <div class="shadow-sm border border-gray-200 rounded-xl p-5 flex flex-col items-center">
         
         <div class="bg-blue-100 rounded-full mb-5 h-16 w-16 flex items-center justify-center">
             <span class="fa-solid fa-qrcode text-3xl text-blue-500"></span>
