--- a/src/app/core/components/dashboard/dashboard.html
+++ b/src/app/core/components/dashboard/dashboard.html
@@ -3,15 +3,40 @@
 <div class="container mx-auto h-20 grid grid-cols-2 gap-4 pt-10">
 
     <!-- col 1 -->
-    <div class="shadow-sm border border-gray-200 rounded-xl p-5 flex flex-col items-center">
+    <div class="shadow-xs border border-gray-200 rounded-xl p-5 flex flex-col items-center">
         
         <div class="bg-blue-100 rounded-full mb-5 h-16 w-16 flex items-center justify-center">
             <span class="fa-solid fa-qrcode text-3xl text-blue-500"></span>
         </div> <!-- span -->
         
-        <div>title</div>
-        <button>button</button>
-    </div>
-    <div class="border-2 border-gray-200 rounded-xl p-2 flex flex-col items-center">col2</div>
+        <div class="text-center mb-5">
+            <h1 class="font-bold text-xl">Escanear QR Code</h1>
+            <p class="text-sm text-gray-500">Use a câmera para ler um QR Code e rastrear um item</p>
+        </div> <!-- text -->
+        
 
+        <button class="border bg-blue-500 text-white w-full p-3 rounded-xl" >
+            <span class="fa-solid fa-qrcode"></span>
+            Click Me
+        </button> 
+    </div>
+
+    <!-- col 2 -->
+    <div class="shadow-xs border border-gray-200 rounded-xl p-5 flex flex-col items-center">
+        
+        <div class="bg-green-100 rounded-full mb-5 h-16 w-16 flex items-center justify-center">
+            <span class="fa-solid fa-plus text-3xl text-green-500 "></span>
+        </div><!-- icon -->
+        
+        <div class="text-center mb-5">
+            <h1 class="font-bold text-xl">Escanear QR Code</h1>
+            <p class="text-sm text-gray-500">Use a câmera para ler um QR Code e rastrear um item</p>
+        </div><!-- text -->
+        
+        <button class="bg-green-50 border border-green-500  text-white w-full p-3 rounded-xl">
+            <span class="fa-solid fa-plus text-green-500"></span>
+            <span class="text-green-500 ml-2">Cadastrar Item</span>
+        </button><!-- button -->
+
+    </div>
 </div>
