--- a/src/app/core/components/header/header.html
+++ b/src/app/core/components/header/header.html
@@ -1,4 +1,4 @@
-<header class="shadow-lg p-10">
+<header class="border-b border-gray-200 p-10">
     <div class="container mx-auto flex flex-row items-center gap-5">
 
         <div class="p-2 bg-blue-100 rounded-xl">
@@ -7,7 +7,7 @@
         
         <div>
             <h1 class="text-2xl font-bold">Rust Manufacturing</h1>
-            <h3 class="text-sm italic font-thin">Sistema de Rastreabilidade</h3>
+            <h3 class="text-sm text-gray-500">Sistema de Rastreabilidade</h3>
         </div>
 
         <div class="ml-auto">
