--- a/src/app/core/components/header/header.html
+++ b/src/app/core/components/header/header.html
@@ -2,7 +2,7 @@
     <div class="container mx-auto flex flex-row items-center gap-5">
 
         <div class="py-2.5 px-3.5 bg-blue-100 rounded-xl">
-            <span class="caixa bi bi-box-seam text-blue-500 text-xl font-bold"></span>
+            <span class="bi bi-box-seam text-blue-500 text-xl font-bold"></span>
         </div>
         
         <div>
