--- a/src/app/core/components/dashboard/dashboard.html
+++ b/src/app/core/components/dashboard/dashboard.html
@@ -3,7 +3,7 @@
 <div class="container mx-auto my-5 grid grid-cols-2 gap-4">
 
     <!-- col 1 -->
-    <div class="shadow-xs border border-gray-200 rounded-xl p-5 flex flex-col items-center hover:shadow-lg transition-shadow duration-300">
+    <div class="shadow-xs bg-white border border-gray-200 rounded-xl p-5 flex flex-col items-center hover:shadow-lg transition-shadow duration-300">
         
         <div class="bg-blue-100 rounded-full mb-5 h-16 w-16 flex items-center justify-center">
             <span class="fa-solid fa-qrcode text-3xl text-blue-500"></span>
@@ -22,7 +22,7 @@
     </div>
 
     <!-- col 2 -->
-    <div class="shadow-xs border border-gray-200 rounded-xl p-5 flex flex-col items-center hover:shadow-lg transition-shadow duration-300">
+    <div class="shadow-xs bg-white border border-gray-200 rounded-xl p-5 flex flex-col items-center hover:shadow-lg transition-shadow duration-300">
         
         <div class="bg-green-100 rounded-full mb-5 h-16 w-16 flex items-center justify-center">
             <span class="fa-solid fa-plus text-3xl text-green-500 "></span>
@@ -55,7 +55,7 @@
 </div>
 
 <!-- Itens -->
-<div class="container mx-auto border border-gray-200 rounded-xl p-5 flex flex-col items-center hover:shadow-lg transition-shadow duration-300">
+<div class="container bg-white mx-auto border border-gray-200 rounded-xl p-5 flex flex-col items-center hover:shadow-lg transition-shadow duration-300">
     <span class="bi bi-box-seam text-5xl text-blue-200 my-5"></span>
 
     <div class="text-center mb-5">
