--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -14,8 +14,8 @@
             <p class="text-sm text-gray-500">Use a câmera para ler um QR Code e rastrear um item</p>
         </div>
 
-        <button routerLink="/item/create"
-            class="bg-blue-500 border border-blue-500  text-white w-64 p-3 rounded-xl hover:bg-blue-600 transition-colors duration-300">
+        <button routerLink="/create"
+            class="bg-blue-500 border border-blue-500  text-white w-64 p-3 rounded-xl hover:bg-blue-600 transition-colors duration-300 hover:cursor-pointer">
             <span class="fa-solid fa-qrcode text-white"></span>
             <span class="text-white ml-2">Iniciar Scanner</span>
         </button>       
@@ -33,8 +33,8 @@
             <p class="text-sm text-gray-500">Crie um novo item para rastrear</p>
         </div>
 
-        <button routerLink="/item/create" 
-            class="group bg-green-50 border border-green-500 w-64 p-3 rounded-xl hover:bg-green-600 transition-colors duration-300">
+        <button routerLink="/create" 
+            class="group bg-green-50 border border-green-500 w-64 p-3 rounded-xl hover:bg-green-600 transition-colors duration-300 hover:cursor-pointer">
             <span class="fa-solid fa-plus text-green-500 group-hover:text-white"></span>
             <span class="text-green-500 ml-2 group-hover:text-white">Cadastrar Item</span>
         </button>
@@ -64,8 +64,8 @@
         <p class="text-sm text-gray-500">Comece criando seu primeiro item rastreável</p>
     </div>
 
-    <button routerLink="/item/create"
-        class="bg-blue-500 border border-blue-500  text-white w-64 p-3 rounded-xl hover:bg-blue-600 transition-colors duration-300">
+    <button routerLink="/create"
+        class="bg-blue-500 border border-blue-500  text-white w-64 p-3 rounded-xl hover:bg-blue-600 transition-colors duration-300 hover:cursor-pointer">
         <span class="fa-solid fa-plus text-white"></span>
         <span class="text-white ml-2">Criar Primeiro Item</span>
     </button>
