--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -68,7 +68,8 @@
     <div class="grid grid-cols-3 gap-4">
         @for (item of trackedItems.trackedItems(); track $index) {
 
-        <div class="flex flex-col bg-white border border-gray-200 rounded-xl p-3">
+        <div [routerLink]="['/item', item.id]"
+            class="cursor-pointer hover:shadow-md transition-shadow duration-200 flex flex-col bg-white border border-gray-200 rounded-xl p-3">
             <div class="flex items-center justify-between w-full pb-3">
                 <div class="flex items-center">
                     <div class="bg-blue-100 px-2 py-1 rounded-lg">
