feat(item): implement delete functionality for items and update local storage

--- a/src/app/pages/item/item.html
+++ b/src/app/pages/item/item.html
@@ -22,7 +22,8 @@
             </div>
         </div>
         <div class="flex items-center justify-center">
-            <button class="bg-red-500 text-white text-md py-2 px-3 rounded-lg" type="button">
+            <button (click)="deleteItem()" class="bg-red-500 text-white text-md py-2 px-3 rounded-lg cursor-pointer"
+                type="button">
                 <i class="bi bi-trash"></i>
             </button>
         </div>
