--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -51,7 +51,7 @@
     </h1>
 
     <p class="text-lg font-bold">
-        <span class="bg-gray-100 px-3 py-1 rounded-full">0 itens</span>
+        <span class="bg-gray-100 px-3 py-1 rounded-full">{{ trackedItems.trackedItems().length }} itens</span>
     </p>
 
 </div>
